load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "attributes",
    srcs = ["attributes.go"],
    importpath = "google.golang.org/grpc/attributes",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":attributes",
    visibility = ["//visibility:public"],
)

go_test(
    name = "attributes_test",
    srcs = ["attributes_test.go"],
    deps = [":attributes"],
)
