load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backoff",
    srcs = ["backoff.go"],
    importpath = "google.golang.org/grpc/backoff",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":backoff",
    visibility = ["//visibility:public"],
)
