load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "balancer",
    srcs = [
        "balancer.go",
        "conn_state_evaluator.go",
    ],
    importpath = "google.golang.org/grpc/balancer",
    visibility = ["//visibility:public"],
    deps = [
        "//channelz",
        "//connectivity",
        "//credentials",
        "//internal",
        "//metadata",
        "//resolver",
        "//serviceconfig",
    ],
)

alias(
    name = "go_default_library",
    actual = ":balancer",
    visibility = ["//visibility:public"],
)

go_test(
    name = "balancer_test",
    srcs = ["conn_state_evaluator_test.go"],
    embed = [":balancer"],
    deps = [
        "//connectivity",
        "//internal/grpctest",
    ],
)
