load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "binarylog",
    srcs = ["sink.go"],
    importpath = "google.golang.org/grpc/binarylog",
    visibility = ["//visibility:public"],
    deps = [
        "//binarylog/grpc_binarylog_v1",
        "//internal/binarylog",
    ],
)

alias(
    name = "go_default_library",
    actual = ":binarylog",
    visibility = ["//visibility:public"],
)

go_test(
    name = "binarylog_test",
    srcs = ["binarylog_end2end_test.go"],
    deps = [
        ":binarylog",
        "//:grpc",
        "//binarylog/grpc_binarylog_v1",
        "//codes",
        "//credentials/insecure",
        "//grpclog",
        "//internal/binarylog",
        "//internal/grpctest",
        "//internal/stubserver",
        "//interop/grpc_testing",
        "//metadata",
        "//status",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
