load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "channelz",
    srcs = ["channelz.go"],
    importpath = "google.golang.org/grpc/channelz",
    visibility = ["//visibility:public"],
    deps = ["//internal/channelz"],
)

alias(
    name = "go_default_library",
    actual = ":channelz",
    visibility = ["//visibility:public"],
)
