load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codes",
    srcs = [
        "code_string.go",
        "codes.go",
    ],
    importpath = "google.golang.org/grpc/codes",
    visibility = ["//visibility:public"],
    deps = ["//internal"],
)

alias(
    name = "go_default_library",
    actual = ":codes",
    visibility = ["//visibility:public"],
)

go_test(
    name = "codes_test",
    srcs = ["codes_test.go"],
    embed = [":codes"],
    deps = [
        "//internal/grpctest",
        "@org_golang_google_genproto_googleapis_rpc//code",
    ],
)
