load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "connectivity",
    srcs = ["connectivity.go"],
    importpath = "google.golang.org/grpc/connectivity",
    visibility = ["//visibility:public"],
    deps = ["//grpclog"],
)

alias(
    name = "go_default_library",
    actual = ":connectivity",
    visibility = ["//visibility:public"],
)
