load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "credentials",
    srcs = [
        "credentials.go",
        "tls.go",
    ],
    importpath = "google.golang.org/grpc/credentials",
    visibility = ["//visibility:public"],
    deps = [
        "//attributes",
        "//internal/credentials",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":credentials",
    visibility = ["//visibility:public"],
)

go_test(
    name = "credentials_test",
    srcs = ["credentials_test.go"],
    embed = [":credentials"],
    deps = [
        "//internal/grpctest",
        "//testdata",
    ],
)
