load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "encoding",
    srcs = ["encoding.go"],
    importpath = "google.golang.org/grpc/encoding",
    visibility = ["//visibility:public"],
    deps = ["//internal/grpcutil"],
)

alias(
    name = "go_default_library",
    actual = ":encoding",
    visibility = ["//visibility:public"],
)

go_test(
    name = "encoding_test",
    srcs = ["encoding_test.go"],
    embed = [":encoding"],
    deps = [
        "//internal/grpcutil",
        "@com_github_google_go_cmp//cmp",
    ],
)
