load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpclog",
    srcs = [
        "component.go",
        "grpclog.go",
        "logger.go",
        "loggerv2.go",
    ],
    importpath = "google.golang.org/grpc/grpclog",
    visibility = ["//visibility:public"],
    deps = ["//internal/grpclog"],
)

alias(
    name = "go_default_library",
    actual = ":grpclog",
    visibility = ["//visibility:public"],
)

go_test(
    name = "grpclog_test",
    srcs = ["loggerv2_test.go"],
    embed = [":grpclog"],
)
