load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keepalive",
    srcs = ["keepalive.go"],
    importpath = "google.golang.org/grpc/keepalive",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":keepalive",
    visibility = ["//visibility:public"],
)
