load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metadata",
    srcs = ["metadata.go"],
    importpath = "google.golang.org/grpc/metadata",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":metadata",
    visibility = ["//visibility:public"],
)

go_test(
    name = "metadata_test",
    srcs = ["metadata_test.go"],
    embed = [":metadata"],
    deps = ["//internal/grpctest"],
)
